# heretic-sokol

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: hmmmath.h
src/: HandmadeMath.h  bin.c  bin.h  camera.h  cube.h  defines.h  gns.h  heretic.h  keystate.c  keystate.h  main.c  maths.c  maths.h  mesh.c  mesh.h
src/shaders/: basic.glsl  standard.glsl
